--- a/UCI9DC L70 TicTacToe/Base.lproj/Main.storyboard
+++ b/UCI9DC L70 TicTacToe/Base.lproj/Main.storyboard
@@ -17,103 +17,98 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V2N-Yu-Uti">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="-4" y="120" width="328" height="328"/>
                                 <subviews>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="board.png" translatesAutoresizingMaskIntoConstraints="NO" id="AGt-o7-LUn">
-                                        <rect key="frame" x="0.0" y="-2" width="600" height="602"/>
+                                        <rect key="frame" x="0.0" y="-2" width="328" height="330"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="e4D-2Z-5cL" appends="YES" id="sPS-S9-fCd"/>
+                                        </connections>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vW2-3G-2ze">
-                                        <rect key="frame" x="25" y="25" width="150" height="150"/>
+                                        <rect key="frame" x="14" y="14" width="82" height="82"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="vW2-3G-2ze" secondAttribute="height" multiplier="1:1" id="Foe-RM-MML"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="cross.png"/>
-                                        <connections>
-                                            <action selector="buttonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xVi-1J-ojy"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JQ0-bv-YJP">
-                                        <rect key="frame" x="425" y="25" width="150" height="150"/>
+                                        <rect key="frame" x="232" y="14" width="82" height="82"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="JQ0-bv-YJP" secondAttribute="height" multiplier="1:1" id="8Bg-wK-nRT"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="cross.png"/>
-                                        <connections>
-                                            <action selector="buttonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5Yt-8T-z44"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pUH-jS-FZS">
-                                        <rect key="frame" x="25" y="225" width="150" height="150"/>
+                                        <rect key="frame" x="14" y="123" width="82" height="82"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="pUH-jS-FZS" secondAttribute="height" multiplier="1:1" id="98i-MV-02a"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="cross.png"/>
-                                        <connections>
-                                            <action selector="buttonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cue-Tu-Ea4"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ljd-a1-b4o">
-                                        <rect key="frame" x="225" y="225" width="150" height="150"/>
+                                        <rect key="frame" x="123" y="123" width="82" height="82"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="ljd-a1-b4o" secondAttribute="height" multiplier="1:1" id="oT6-sW-qOZ"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="cross.png"/>
-                                        <connections>
-                                            <action selector="buttonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uMc-vz-uP8"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l8n-rl-yv5">
-                                        <rect key="frame" x="425" y="225" width="150" height="150"/>
+                                        <rect key="frame" x="232" y="123" width="82" height="82"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="l8n-rl-yv5" secondAttribute="height" multiplier="1:1" id="Fmj-Uv-A39"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="nought.png"/>
-                                        <connections>
-                                            <action selector="buttonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XwZ-ke-4HG"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s5p-QI-sxw">
-                                        <rect key="frame" x="25" y="425" width="150" height="150"/>
+                                        <rect key="frame" x="14" y="232" width="82" height="82"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="s5p-QI-sxw" secondAttribute="height" multiplier="1:1" id="62C-qn-9Z8"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="nought.png"/>
-                                        <connections>
-                                            <action selector="buttonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Mq6-vP-wUj"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="7" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sEB-Ec-eAK">
-                                        <rect key="frame" x="225" y="425" width="150" height="150"/>
+                                        <rect key="frame" x="123" y="232" width="82" height="82"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="sEB-Ec-eAK" secondAttribute="height" multiplier="1:1" id="fyD-sD-F0z"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="cross.png"/>
-                                        <connections>
-                                            <action selector="buttonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MWy-Ft-ovA"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="8" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dQV-KF-seX">
-                                        <rect key="frame" x="425" y="425" width="150" height="150"/>
+                                        <rect key="frame" x="232" y="232" width="82" height="82"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="dQV-KF-seX" secondAttribute="height" multiplier="1:1" id="mOH-4p-VWv"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="nought.png"/>
-                                        <connections>
-                                            <action selector="buttonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UZD-CJ-Dz6"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mk1-eD-jaY">
-                                        <rect key="frame" x="225" y="25" width="150" height="150"/>
+                                        <rect key="frame" x="123" y="14" width="82" height="82"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="mk1-eD-jaY" secondAttribute="height" multiplier="1:1" id="9AY-L8-LZq"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="nought.png"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nought have won!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Zqg-Uq-muH">
+                                        <rect key="frame" x="20" y="129" width="288" height="70"/>
+                                        <color key="backgroundColor" red="0.40336379730748728" green="1" blue="0.29658460260563957" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="288" id="ham-WC-miW"/>
+                                            <constraint firstAttribute="height" constant="70" id="iMV-dE-ODg"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VDG-Uo-hLg">
+                                        <rect key="frame" x="129" y="207" width="71" height="30"/>
+                                        <state key="normal" title="Play Again"/>
                                         <connections>
-                                            <action selector="buttonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ybQ-Tx-xbo"/>
+                                            <action selector="playAgain:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WN2-7g-pjy"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -134,9 +129,13 @@
                                     <constraint firstItem="pUH-jS-FZS" firstAttribute="centerY" secondItem="V2N-Yu-Uti" secondAttribute="centerY" id="Ecw-Ux-3Sc"/>
                                     <constraint firstItem="vW2-3G-2ze" firstAttribute="centerX" secondItem="V2N-Yu-Uti" secondAttribute="centerX" multiplier="1/3" id="I1o-hu-wSk"/>
                                     <constraint firstAttribute="width" secondItem="V2N-Yu-Uti" secondAttribute="height" multiplier="1:1" id="LEG-2N-Ka8"/>
+                                    <constraint firstItem="VDG-Uo-hLg" firstAttribute="top" secondItem="ljd-a1-b4o" secondAttribute="bottom" constant="2" id="Lag-Gd-mSr"/>
                                     <constraint firstItem="mk1-eD-jaY" firstAttribute="width" secondItem="AGt-o7-LUn" secondAttribute="width" multiplier="1/4" id="Nf3-ZB-HNa"/>
+                                    <constraint firstItem="Zqg-Uq-muH" firstAttribute="centerY" secondItem="V2N-Yu-Uti" secondAttribute="centerY" id="NnS-St-OEP"/>
+                                    <constraint firstItem="VDG-Uo-hLg" firstAttribute="centerX" secondItem="Zqg-Uq-muH" secondAttribute="centerX" id="S50-2m-9fV"/>
                                     <constraint firstItem="pUH-jS-FZS" firstAttribute="width" secondItem="AGt-o7-LUn" secondAttribute="width" multiplier="1/4" id="SRd-vb-rFE"/>
                                     <constraint firstItem="vW2-3G-2ze" firstAttribute="width" secondItem="AGt-o7-LUn" secondAttribute="width" multiplier="1/4" id="Vku-7B-a8e"/>
+                                    <constraint firstItem="Zqg-Uq-muH" firstAttribute="centerX" secondItem="V2N-Yu-Uti" secondAttribute="centerX" identifier="ShowLabel" id="ZPS-TD-uX2"/>
                                     <constraint firstAttribute="bottom" secondItem="AGt-o7-LUn" secondAttribute="bottom" id="ZW9-VG-B33"/>
                                     <constraint firstItem="dQV-KF-seX" firstAttribute="width" secondItem="AGt-o7-LUn" secondAttribute="width" multiplier="1/4" id="dKS-5z-p9d"/>
                                     <constraint firstItem="pUH-jS-FZS" firstAttribute="centerX" secondItem="vW2-3G-2ze" secondAttribute="centerX" id="ell-j5-9zy"/>
@@ -170,7 +169,12 @@
                             <constraint firstItem="V2N-Yu-Uti" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="tyC-JR-noQ"/>
                         </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
+                        <outlet property="ResultLabel" destination="Zqg-Uq-muH" id="ovg-D4-F6E"/>
+                        <outlet property="gameBoardImageView" destination="AGt-o7-LUn" id="B0Q-1t-wwc"/>
+                        <outlet property="labelsCentralConstraint" destination="ZPS-TD-uX2" id="oK7-uB-Y4j"/>
+                        <outlet property="playAgainButton" destination="VDG-Uo-hLg" id="t5a-gJ-V4t"/>
                         <outletCollection property="crossNoughtsButtons" destination="sEB-Ec-eAK" collectionClass="NSMutableArray" id="MXu-Lc-krt"/>
                         <outletCollection property="crossNoughtsButtons" destination="s5p-QI-sxw" collectionClass="NSMutableArray" id="8Oq-Mt-KFk"/>
                         <outletCollection property="crossNoughtsButtons" destination="l8n-rl-yv5" collectionClass="NSMutableArray" id="GPo-Cd-Fio"/>
@@ -183,6 +187,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="e4D-2Z-5cL">
+                    <connections>
+                        <action selector="gameBoardTap:" destination="BYZ-38-t0r" id="pcz-bd-6Se"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="339" y="426"/>
         </scene>
